# Vup

./: .env  README.md  gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
Vup/: __init__.py  main.py
